--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -34,11 +34,12 @@ html, body, #root{
   margin-top:-50px;
 }
 
-/* .Image{
-  width: 100px;
-  height: 100px;
-  ma
-} */
+.Image{
+  width: 100%;
+  /* height: 15vw; */
+  object-fit: contain;
+  right:50%
+}
 
 
 
