--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -34,12 +34,39 @@ html, body, #root{
   margin-top:-50px;
 }
 
-.Image{
+.bg-cover{
+  background-size: cover;
+}
+
+/* .Image{
   width: 100%;
-  /* height: 15vw; */
+  height: 15vw;
   object-fit: contain;
   right:50%
+} */
+
+.fit-box{
+  object-fit: none;
+  object-position: center;
+  max-height: 150px;
+  width: 100%;
 }
+
+.sidebar {
+  height: 100%;
+  width: 25%;
+  background-color: black;
+  transition: 0.7s;
+}
+
+
+.avatar {
+  vertical-align: middle;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
 
 
 
